--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # local package
--e .
+#-e .
 
 # external requirements
 click
@@ -8,3 +8,16 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+
+#project env requirements
+jupyterlab
+numpy
+pandas
+matplotlib
+plotly
+python-box
+pyyaml
+requests
+scikit-learn
+scipy
+seaborn
