--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ flake8
 python-dotenv>=0.5.1
 
 #project env requirements
-jupyterlab
+#jupyterlab
 numpy
 pandas
 matplotlib
@@ -26,4 +26,4 @@ dash_html_components
 dash_core_components
 dash.dependencies
 plotly.express
-
+unidecode
