--- a/.gitignore
+++ b/.gitignore
@@ -76,8 +76,8 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/*
-/doc/*
+data/*
+docs/*
 
 # Mac OS-specific storage files
 .DS_Store
